Fix basic layout issues

--- a/assets/less/table.less
+++ b/assets/less/table.less
@@ -58,6 +58,17 @@
 
 	.sly-col-func,
 	.sly-col-status {
-		width: 200px;
+		width: 225px;
+	}
+}
+
+#environment_system {
+	dt {
+		display: inline-block;
+		width: 250px;
+	}
+	dd {
+		display: inline-block;
+		width: ~"calc(100% - 255px)";
 	}
 }
